--- a/index.html
+++ b/index.html
@@ -3,38 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timed Error Windows</title>
+    <title>Endless Error Windows</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button onclick="triggerErrors()">Click me!</button>
 
     <script>
+        let windows = [];
+
         function triggerErrors() {
-            let windows = [];
-
-            for (let i = 0; i < 100; i++) { // Fixed loop syntax
-                setTimeout(() => {
-                    let randomX = Math.floor(Math.random() * window.innerWidth * 0.8);
-                    let randomY = Math.floor(Math.random() * window.innerHeight * 0.8);
-
-                    let errorWin = window.open("about:blank", "_blank", `width=400,height=200,left=${randomX},top=${randomY}`);
-
-                    if (errorWin) {
-                        errorWin.document.write("<h1 style='color: red; text-align: center;'>ERROR!</h1>");
-                        errorWin.document.write("<p style='text-align: center;'>Critical System Failure Detected...</p>");
-
-                        windows.push(errorWin);
-                    }
-                }, i * 1); // Opens instantly
+            for (let i = 0; i < 10; i++) {
+                createErrorWindow();
             }
 
-            // Close all windows after 5 seconds
+            // Monitor windows and create two new ones if one is closed
+            setInterval(() => {
+                windows = windows.filter(win => !win.closed);
+                if (windows.length < 100) { // Prevent infinite explosion
+                    while (windows.length < 100) {
+                        createErrorWindow();
+                    }
+                }
+            }, 1000);
+
+            // Close all windows after 30 seconds
             setTimeout(() => {
                 windows.forEach(win => win.close());
-            }, 5000);
+            }, 30000);
+        }
+
+        function createErrorWindow() {
+            let randomX = Math.floor(Math.random() * window.innerWidth * 0.8);
+            let randomY = Math.floor(Math.random() * window.innerHeight * 0.8);
+
+            let errorWin = window.open("about:blank", "_blank", `width=400,height=200,left=${randomX},top=${randomY}`);
+
+            if (errorWin) {
+                errorWin.document.write("<h1 style='color: red; text-align: center;'>ERROR!</h1>");
+                errorWin.document.write("<p style='text-align: center;'>Critical System Failure Detected...</p>");
+
+                windows.push(errorWin);
+            }
         }
     </script>
 </body>
 </html>
+
 
