--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             if (errorWin) {
                 errorWin.document.write("<h1 style='color: red; text-align: center;'>ERROR!</h1>");
-                errorWin.document.write("<p style='text-align: center;'>Critical System Failure Detected...</p>");
+                errorWin.document.write("<p style='text-align: center;'>amongus</p>");
 
                 windows.push(errorWin);
             }
